<resources>
    <string name="app_name">Quizapp</string>
    <string name="Welcome">Bienvenido a nuestro Quiz de peliculas "\n" Para empezar pulsa el botón que tienes abajo</string>
    <string name="Begin">Empezar</string>
    <string name="pregunta1">¿QUÉ PELÍCULA GANÓ EL ÓSCAR DE ANIMACIÓN DE 2019?</string>
    <string name="Respuesta_correcta">Spiderman Un nuevo universo</string>
    <string name="RespuestaFalsa1">Spiderman 1</string>
    <string name="RespuestaFalsa2">Spiderman 2</string>
    <string name="RespuestaFalsa3">Spiderman 3</string>
    <string name="Puntuacion">Puntuación : 0</string>
    <string name="Siguiente">Siguiente</string>
    <string name="Comprobar">Comprobar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="content_question2">¿CUÁL DE LAS SIGUIENTES ES UNA PELÍCULA DE HUGH JACKMAN?</string>
    <string name="answer_question_correct_2">El gran showman</string>
    <string name="answer_question_false_2_1">Lo imposible</string>
    <string name="answer_question_false_2_2">Multiple</string>
    <string name="answer_question_false_2_3">Los increibles</string>
    <string name="content_question3">¿CUÁNTAS PELÍCULAS EXISTEN DE MISIÓN IMPOSIBLE?</string>
    <string name="answer_question_correct_3">6</string>
    <string name="answer_question_false_3_1">8</string>
    <string name="answer_question_false_3_2">3</string>
    <string name="answer_question_false_3_3">7</string>
    <string name="content_question4">IDENTIFICA LA PELÍCULA. ¿CUÁL DE ESTAS IMÁGENES ES UNA ESCENA DE JURASSIC PARK?</string>
    <string name="answer_question_correct_4">Imagen 1</string>
    <string name="answer_question_false_4_1">Imagen 2</string>
    <string name="answer_question_false_4_2">Imagen 3</string>
    <string name="answer_question_false_4_3">Imagen 4</string>
    <string name="content_question5">¿CÓMO SE LLAMA ESTE ACTOR?</string>
    <string name="answer_question_correct_5">Jhonny Depp</string>
    <string name="answer_question_false_5_1">Tom Cruise</string>
    <string name="answer_question_false_5_2">Leonardo Di Caprio</string>
    <string name="answer_question_false_5_3">Tom Hiddleston</string>
    <string name="Title_1">1.</string>
    <string name="Title_2">2.</string>
    <string name="Title_3">3.</string>
    <string name="Title_4">4.</string>
    <string name="Title_5">5.</string>
    <string name="Try_Again">Reintentar</string>
    <string name="Exit">Salir</string>
    <string name="Entrar">Entrar</string>
    <string name="si_no_est_registrado_registrese_aqui">Si no está registrado, registrese aqui:</string>
    <string name="Null"></string>
    <string name="Registro">Registro</string>
    <string name="Nombre">Nombre de usuario:</string>
    <string name="Contraseña">Contraseña:</string>
    <string name="ManualInicio">Botón para empezar el\nquiz y  responder preguntas</string>
    <string name="ManualLogin1">Si tienes usuario y contraseña,\n introdúcelos a continuación</string>
    <string name="ManualLogin2">Aceptar inicio de sesión</string>
    <string name="ManualLogin3">Si no tienes creada ninguna cuenta,\n pulsa el botón a continuación para registrarte</string>
    <string name="ManualPregunta1">Pregunta a responder</string>
    <string name="ManualPregunta2">Respuestas de la pregunta</string>
    <string name="ManualPregunta3">Puntuación total \n que llevas acumulada</string>
    <string name="ManualPregunta4">Botón para comprobar \n la respuesta marcada \n y pasar a la siguiente pantalla</string>
    <string name="ManualRegistro1">Inserta tu nombre de Usuario</string>
    <string name="ManualRegistro2">Introduce una contraseña única</string>
    <string name="ManualRegistro3">Si tienes todo rellenado, \nacepta para finalizar el registro</string>
    <string name="Registro1">Registro de Nuevo Usuario</string>
    <string name="Registro2">Nombre de Usuario:</string>
    <string name="Registro3">Contraseña:</string>
    <string name="RegistroButton">Registrarse</string>

    <string name="nameFinal">TextView</string>
    <string name="numberGames">Número de partidas jugadas:</string>
    <string name="averagePuntuation">Puntuación media total:</string>
    <string name="numberGamesPlaceHolder">Text</string>
    <string name="averagePuntuarionPlaceHolder">Text</string>
</resources>