<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F4E8C"
    tools:context=".MainActivityFinalScore">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/Puntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_da"
        android:text="@string/Puntuacion"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.519" />

    <Button
        android:id="@+id/Try_Again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="84dp"
        android:backgroundTint="#D5CECE"
        android:onClick="retry"
        android:text="@string/Try_Again"
        app:layout_constraintEnd_toStartOf="@+id/Exit"
        app:layout_constraintTop_toBottomOf="@+id/Puntuacion" />

    <Button
        android:id="@+id/Exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#FF0000"
        android:onClick="quit"
        android:text="@string/Exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Puntuacion" />

    <TextView
        android:id="@+id/textNameFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="192dp"
        android:text="@string/nameFinal"
        android:textColor="#FDFDFD"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/numberGamestxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="176dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/numberGames"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/numberGames"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberGames"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="176dp"
        android:layout_marginEnd="30dp"
        android:text="@string/numberGamesPlaceHolder"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtAvgPuntuacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:fontFamily="@font/baloo_da"
        android:text="@string/averagePuntuation"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/avgPoints"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/avgPoints"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="30dp"
        android:text="@string/averagePuntuarionPlaceHolder"
        android:textColor="#FDFDFD"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>